# comp1100-assignment3-Haskell

./: .gitignore  .gitlab-ci.yml  Backgammon.cabal  Board.hs  README.md  compiler.xml  info.md  modules.xml  workspace.xml
src/: Main.hs  Move.hs  Options.hs  PlayAsBlack.hs  PlayAsWhite.hs  Player.hs  State.hs
