name:           Backgammon
version:        0.2.0.0

author:         Steven X. Han
maintainer:     steven.han@anu.edu.au

category:       Game
build-type:     Simple
cabal-version:  >=1.10

executable Backgammon
    main-is:
        Main.hs
    other-modules:
        Move,
        Board,
        Player,
        State,
        PlayAsWhite,
        PlayAsBlack,
        Options

    build-depends:
        base                 >= 4.10.1 && < 4.11,
        optparse-applicative >= 0.14.0 && < 0.15,
        random               >= 1.1 && < 1.2,
        safe                 >= 0.3.16 && < 0.4,
        QuickCheck           >= 2.10.1 && < 2.12,
        time                 >= 1.8.0 && < 1.9,
        containers           >= 0.5.10 && < 0.6

    hs-source-dirs:
        src

    default-language:
        Haskell2010

    ghc-options:
        -Wall -fwarn-unsafe
